--- a/visualization/fitness.html
+++ b/visualization/fitness.html
@@ -22,7 +22,7 @@ var line = d3.line()
     .y(function(d) { return y(d.fitness); });
 
 
-    fetch('https://lipsumar.cloudant.com/genetic_2048/_design/fitness/_view/avg', {
+    fetch('https://lipsumar.cloudant.com/'+location.hash.substr(1)+'/_design/fitness/_view/avg', {
     	method: 'get'
     }).then(function(response) {
     	return response.json();
